--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "HomePage"
 title_separator          : "-"
 name                     : &name "Yannian Gu (古延年)"
-description              : &description "personal description"
+description              : &description "Master in NWPU"
 url                      : https://yanniangu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yanniangu/yanniangu.github.io"
