--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yannian Gu (古延年)"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Pursuing Master Degree for Computer Science in NWPU"
   location         : "Xi'an, Shaanxi"
   employer         :
   pubmed           : 
